# featherlb

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  config.yaml  featherlb.yaml  gen.go  go.mod  lb.c  main.go
.devcontainer/: devcontainer.json
bpf/: loadbalancer.c
cmd/featherlb/: config.go  gen.go  loadbalancer_bpfeb.go  loadbalancer_bpfel.go  log.go  main.go
cmd/featherlb/strategies/: roundrobin.go  strategy.go
cmd/featherlb/types/: config.go
e2e/: docker-compose.yaml
e2e/backend/: Dockerfile  backend.py
e2e/config/: featherlb.yaml
e2e/test-client/: Dockerfile
featherlb/: Cargo.toml  build.rs
featherlb-common/: Cargo.toml
featherlb-ebpf/: Cargo.toml
featherlb-ebpf/src/: main.rs
featherlb/src/: main.rs
internal/app/featherlb/log/: log.go
internal/app/featherlb/server/: server.go
internal/pkg/strategies/: iphash.go  random.go  roundrobin.go  strategy.go
internal/pkg/types/: config.go
test/e2e/: docker-compose.yaml  test.sh
test/e2e/backend/: Dockerfile
test/e2e/config/: featherlb.yaml  iphash.yaml  random.yaml  roundrobin.yaml
test/e2e/test-client/: Dockerfile
